# gym-equipment-directory

./: .coveragerc  .env.example  .env.prod.example  .env.production.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  approve_all.sh  backup_before_purge.sql  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  payload.json  preview-tunnel.sh  prewview_tunnel.sh  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  result.txt  setup.py  test_output.txt  test_output_2.txt  test_output_card.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.json  pull_request_template.md
app/: __init__.py  _alembic_config.py  db.py  deps.py  logging.py  main.py  schemas.py
backend/: Dockerfile.render  entrypoint.sh
docs/: 2025-09-04.md  GO_TO_MARKET.md  MVP.md  RELEASE_INSTRUCTION.md  SQLAlchemy_Alembic.md  USER_TEST_PLAN.md  accessibility.md  alembic_notes.md  architecture.md  backlog.md  db.md  deploy-render.md  deployment.md  fe10-progress.md  feature-nearby.md  frontend-search.md  init_migrations.md  openapi.json  ops.md  ops_geocode_and_freshness.md  ops_ingest_admin.md  pagination.md  parsed_json_spec.md  performance.md  pr-preview-aws-env.md  pr-preview-aws-handbook.md  pr-preview-aws-runbook.md  pr-preview-aws.md  pr06_prompt.md  pr07_prompt.md  pr08_prompt.md  pr09_prompt.md  pr10_prompt.md  pr11_prompt.md  pr12_prompt.md  qa-checklist.md  review-pr06-pr12.md  roadmap-next.md  roadmap.md  setup-db.md  (+4 more)
frontend/: .gitignore  (+16 more)
(+592 files in other folders)
