[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-equipment-directory"
version = "0.0.1"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", ".venv*", "alembic/versions"]

[tool.ruff.lint]
# 有効にするルールセット：
#  E,F: pycodestyle/pyflakes
#  I: import順（isort互換）
#  UP: pyupgrade（最新構文へ促す）
select = ["E", "F", "I", "UP"]
ignore = []

# ファイルごとの緩和
[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-export を許容
"migrations/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
# Keep defaults lenient to avoid CI noise; tighten later as needed.
ignore_missing_imports = true
